--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Biblioplexo - Links</title>
+    <title>Biblioplexo</title>
+    <meta name="title" content="Biblioplexo" />
+    <meta
+      name="description"
+      content="Bem-vindo ao Biblioplexo! Aqui você encontra unboxings, gameplays físicos e partidas no MTG Arena, com dicas e análises sobre Magic: The Gathering. "
+    />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.biblioplexo.com/" />
+    <meta property="og:title" content="Biblioplexo" />
+    <meta property="og:description" content="" />
+    <meta property="og:image" content="/assets/banner.png" />
+
+    <!-- X (Twitter) -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.biblioplexo.com/" />
+    <meta property="twitter:title" content="Biblioplexo" />
+    <meta property="twitter:description" content="" />
+    <meta property="twitter:image" content="/assets/banner.png" />
+
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
