--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
     <meta property="og:url" content="https://www.biblioplexo.com/" />
     <meta property="og:title" content="Biblioplexo" />
     <meta property="og:description" content="" />
-    <meta property="og:image" content="/assets/banner.png" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/rodrigoacs/biblioplexo/refs/heads/main/assets/banner.png"
+    />
 
     <!-- X (Twitter) -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.biblioplexo.com/" />
     <meta property="twitter:title" content="Biblioplexo" />
     <meta property="twitter:description" content="" />
-    <meta property="twitter:image" content="/assets/banner.png" />
+    <meta
+      property="twitter:image"
+      content="https://raw.githubusercontent.com/rodrigoacs/biblioplexo/refs/heads/main/assets/banner.png"
+    />
 
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
