--- a/index.html
+++ b/index.html
@@ -2,28 +2,35 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title>Biblioplexo</title>
     <meta name="title" content="Biblioplexo" />
     <meta
       name="description"
       content="Bem-vindo ao Biblioplexo! Aqui você encontra unboxings, gameplays físicos e partidas no MTG Arena, com dicas e análises sobre Magic: The Gathering. "
     />
-    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.biblioplexo.com/" />
     <meta property="og:title" content="Biblioplexo" />
-    <meta property="og:description" content="" />
+    <meta
+      property="og:description"
+      content="Bem-vindo ao Biblioplexo! Aqui você encontra unboxings, gameplays físicos e partidas no MTG Arena, com dicas e análises sobre Magic: The Gathering. "
+    />
     <meta
       property="og:image"
       content="https://raw.githubusercontent.com/rodrigoacs/biblioplexo/refs/heads/main/assets/banner.png"
     />
 
-    <!-- X (Twitter) -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.biblioplexo.com/" />
     <meta property="twitter:title" content="Biblioplexo" />
-    <meta property="twitter:description" content="" />
+    <meta
+      property="twitter:description"
+      content="Bem-vindo ao Biblioplexo! Aqui você encontra unboxings, gameplays físicos e partidas no MTG Arena, com dicas e análises sobre Magic: The Gathering. "
+    />
     <meta
       property="twitter:image"
       content="https://raw.githubusercontent.com/rodrigoacs/biblioplexo/refs/heads/main/assets/banner.png"
@@ -48,7 +55,7 @@
       </header>
 
       <div class="links-list">
-        <a href="https://www.youtube.com/@Biblioplexo" target="_blank">
+        <a id="youtube" href="https://www.youtube.com/@Biblioplexo" target="_blank">
           <span>
             <svg fill="currentColor" viewBox="0 0 576 512">
               <path
@@ -59,7 +66,7 @@
           </span>
         </a>
 
-        <a href="https://www.instagram.com/biblioplexo/" target="_blank">
+        <a id="instagram" href="https://www.instagram.com/biblioplexo/" target="_blank">
           <span>
             <svg fill="currentColor" viewBox="0 0 448 512">
               <path
@@ -70,7 +77,7 @@
           </span>
         </a>
 
-        <a href="https://www.tiktok.com/@biblioplexo" target="_blank">
+        <a id="tiktok" href="https://www.tiktok.com/@biblioplexo" target="_blank">
           <span>
             <svg fill="currentColor" viewBox="0 0 448 512">
               <path
@@ -81,37 +88,24 @@
           </span>
         </a>
 
-        <a href="https://www.ligamagic.com.br/?view=user&nick=Rodrigo110907" target="_blank">
+        <a
+          id="ligamagic"
+          href="https://www.ligamagic.com.br/?view=user&nick=Rodrigo110907"
+          target="_blank"
+        >
           <span>
-            <svg viewBox="0 0 448 512">
-              <style type="text/css">
-                .st0 {
-                  fill: #2c2c2e;
-                }
-                .st1 {
-                  fill: #fefefe;
-                }
-              </style>
-              <path
-                class="st0"
-                d="M512.1,236.1v41c-1.1,7-1,14.1-1.7,21.2c-1.5,16.2-6.2,31.7-11.8,46.8c-11,29.6-26.5,56.7-47.4,80.4  c-21.1,23.9-45.4,43.9-73.8,58.7c-20.9,11.1-43.2,19.3-66.3,24.4c-10.3,2.2-20.8,2.2-31.2,3c-1.3,0.1-2.7-0.4-3.8,0.5h-41  c-7-1.1-14.2-1-21.2-1.7c-16.2-1.5-31.7-6.2-46.8-11.8c-29.6-11-56.7-26.5-80.4-47.4c-23.9-21.1-43.9-45.4-58.7-73.8  C17,356.5,8.7,334.2,3.6,311.1c-2.2-10.1-2.1-20.4-3-30.7c-0.1-1.1,0.4-2.3-0.5-3.3v-42c1.1-7,1-14.2,1.7-21.2  c1.5-16.1,6.1-31.4,11.6-46.4C23.3,140.8,36.9,116,55,93.9c22.6-27.4,49.1-50,80.8-66.4c20.2-10.6,41.7-18.6,64-23.6  c12.4-2.7,25-3,37.7-3.3c3.2-0.3,6.4,0.6,9.6-0.5h29c7.4,1,14.8,1,22.2,1.7c16.2,1.5,31.7,6.2,46.8,11.8  c29.6,11,56.7,26.5,80.3,47.5c24,21.2,44.1,45.6,58.9,74.2c11,20.8,19.1,42.9,24.2,65.9c2.2,10.3,2.2,20.8,3,31.2  C511.7,233.5,511.2,234.9,512.1,236.1z"
-              />
-              <path
-                class="st0"
-                d="M236.9,1c0.1-0.3,0.2-0.6,0.2-0.9h10C243.8,1.6,240.4,1.3,236.9,1z"
-              />
-              <path
-                class="st1"
-                d="M134.9,340.1c4.2-8.3,8.2-16.3,12.2-24.3c6-11.9,11.8-23.8,18-35.6c1.5-2.8,1.1-4.7-0.9-7  c-17.2-19.7-32.4-41-45.4-63.6c-13.4-23.4-24-47.9-27.2-74.9c-1.9-15.8,1-30.7,13.5-42c7.6-6.9,17.2-9.3,27.2-9.6  c20.2-0.6,39.2,4.7,57.5,12.6c31.8,13.6,59.4,33.8,86.1,55.3c31.3,25.2,59.5,54,84.3,85.7c18.5,23.6,35.2,48.4,47.4,75.9  c8.3,18.8,14.2,38.2,13.7,59.3c-0.6,23.9-16.2,40.3-40.3,41.1c-20.2,0.7-39.2-4.6-57.6-12.4c-32.3-13.8-60.4-34.1-87.2-56.3  c-3.1-2.7-7.1-4.2-11.2-4.1c-28.5,0.2-57,0.1-85.5,0.1C138.2,340.3,136.9,340.2,134.9,340.1z"
-              />
-              <path
-                class="st0"
-                d="M258,340.3c11.7,0,23.7-0.3,35.6,0.1c4.8,0.2,7.4-1.2,9.5-5.7c5.2-11.3,11-22.3,17-34.2H209.8  c5.5-10.8,10.5-20.9,15.6-30.9c14.3-28.3,28.7-56.6,43-84.9c4-7.8,8-15.7,11.9-23.6c1.3-2.8,2.2-2.3,4.2-0.6  c20.8,17.5,40,36.6,57.6,57.3c19.4,22.9,36.9,47.1,50.4,73.9c10.5,20.8,18.5,42.4,16.7,66.4c-1.4,18.3-14.6,31.5-32.8,32.9  c-20.5,1.7-39.5-4-57.9-12.2c-21.5-9.6-40.9-22.7-59.8-36.6C258,342,257.6,341.2,258,340.3C258,340.4,258,340.3,258,340.3z"
-              />
-              <path
-                class="st0"
-                d="M174.1,261.5c-21.5-26.7-40.9-53.8-53-85.4c-5.3-13.8-8.7-27.9-8.4-42.8c0.4-24.5,14.5-38.7,39-38.8  c18.6-0.1,36.1,5.3,52.9,13c26,12,49.1,28.4,71.2,46.4c0.2,0.2,0.3,0.5,0.7,1.5h-15.4c-9.7,0-19.3,0.1-29-0.1  c-2.9,0-4.4,0.8-5.8,3.4c-14.4,28.5-28.8,56.9-43.2,85.3C180.2,249.6,177.4,255.2,174.1,261.5z"
-              />
+            <svg viewBox="0 0 1601.000000 1601.000000">
+              <g
+                transform="translate(0.000000,1601.000000) scale(0.100000,-0.100000)"
+                fill="#ffffff"
+              >
+                <path
+                  d="M7410 15996 c0 -29 237 -26 289 4 11 6 -34 9 -136 10 -122 0 -153 -3 -153 -14z"
+                />
+                <path
+                  d="M4038 13410 c-413 -35 -709 -192 -934 -495 -236 -319 -306 -710 -223 -1252 132 -871 505 -1739 1217 -2833 262 -402 624 -884 947 -1260 115 -134 151 -195 141 -238 -4 -15 -223 -458 -487 -985 -265 -527 -478 -961 -474 -965 4 -4 667 -9 1473 -12 1333 -5 1471 -7 1508 -22 85 -34 125 -60 270 -179 773 -632 1438 -1086 2086 -1423 714 -371 1365 -584 1950 -637 190 -17 537 -7 660 20 516 112 857 457 969 979 42 197 37 576 -12 887 -147 934 -712 2078 -1634 3310 -790 1056 -1695 2012 -2675 2826 -676 562 -1352 1053 -1890 1375 -738 442 -1455 738 -2053 848 -274 51 -620 74 -839 56z m1167 -390 c767 -117 1643 -524 2625 -1218 290 -205 792 -596 803 -626 7 -18 -165 -21 -1043 -21 -450 0 -442 1 -493 -67 -13 -18 -320 -618 -682 -1333 -784 -1549 -966 -1905 -975 -1905 -14 0 -389 484 -582 750 -533 738 -909 1428 -1131 2075 -154 451 -222 881 -197 1257 43 628 372 1008 957 1103 133 22 534 14 718 -15z m3761 -2092 c667 -569 1332 -1245 1860 -1888 645 -786 1075 -1429 1438 -2149 341 -676 492 -1166 526 -1705 31 -493 -62 -815 -310 -1067 -223 -226 -453 -318 -841 -335 -857 -37 -1913 379 -3144 1239 -194 136 -419 300 -427 312 -25 35 -22 35 605 35 l612 0 50 24 c28 13 60 34 72 48 13 13 153 284 311 601 l289 577 -1723 0 -1724 0 184 363 c609 1200 1793 3541 1901 3757 70 140 134 263 143 273 29 32 56 20 178 -85z"
+                />
+              </g>
             </svg>
             Liga Magic
           </span>
